--- a/system_user_cms/user_project_detail.html
+++ b/system_user_cms/user_project_detail.html
@@ -1271,6 +1271,30 @@
                               <button class="btn btn-danger btn-sm">削除</button>
                             </td>
                           </tr>
+                          <tr>
+                            <td>株式会社専門五</td>
+                            <td>佐々木 亮</td>
+                            <td>ササキ リョウ</td>
+                            <td>土地家屋調査士</td>
+                            <td>一般</td>
+                            <td>ryo.sasaki@example.com</td>
+                            <td>090-2345-0005</td>
+                            <td>
+                              <button class="btn btn-danger btn-sm">削除</button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>株式会社専門六</td>
+                            <td>山田 美咲</td>
+                            <td>ヤマダ ミサキ</td>
+                            <td>測量士</td>
+                            <td>一般</td>
+                            <td>misaki.yamada@example.com</td>
+                            <td>090-2345-0006</td>
+                            <td>
+                              <button class="btn btn-danger btn-sm">削除</button>
+                            </td>
+                          </tr>
                         </tbody>
                       </table>
                     </div>
